syntax = "proto3";

//Options for the GRPC
option java_multiple_files = true;
option java_package = "grpc.smartWarehouse.inventoryManagement";
option java_outer_classname = "InventoryManagementServiceImpl";

package smartwarehouse;


//Service Definition
service InventoryManagement {
	rpc checkItem (CheckItemRequest) returns (CheckItemReply){}
}


// Define the messages
message CheckItemRequest{
	string itemID = 1;
}

message CheckItemReply{
	string currentQuantities = 1;
}