syntax = "proto3";

//Options for the GRPC
option java_multiple_files = true;
option java_package = "grpc.smartWarehouse.orderManagement";
option java_outer_classname = "OrderManagementServiceImpl";

package smartwarehouse;


//Service Definition
service OrderManagement {
	rpc OrderItem (OrderRequest) returns (OrderReply){}
	rpc UpdateOrderStatus (stream OrderRequest) returns (stream OrderReply){}
	rpc	CancelOrder(OrderRequest) returns (OrderReply){}
}


// Define the messages
message OrderRequest{
	string customerName = 1;
	string itemID = 2;
	int32 orderQuantities = 3;
	string orderID = 4;
	string newStatus = 5;

}

message OrderReply{
	string orderID = 1;
	string currentStatus = 2;
	string success_failureMessage = 3;
}